fix: use OCI registry for bitnami mlflow chart

--- a/namespace/application/mlflow.yaml
+++ b/namespace/application/mlflow.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://charts.bitnami.com/bitnami
+    repoURL: registry-1.docker.io/bitnamicharts
     chart: mlflow
     targetRevision: 5.1.17
     helm:
