fix: move auth under tracking section

--- a/namespace/application/mlflow.yaml
+++ b/namespace/application/mlflow.yaml
@@ -29,9 +29,9 @@ spec:
               http: 5000
           persistence:
             enabled: false
+          auth:
+            enabled: true
         defaultArtifactRoot: file:///mlruns
-        auth:
-          enabled: false
         postgresql:
           enabled: true
           image:
