--- a/namespace/application/minio.yaml
+++ b/namespace/application/minio.yaml
@@ -14,6 +14,10 @@ spec:
     targetRevision: 13.7.2
     helm:
       valuesObject:
+        image:
+          repository: bitnamilegacy/minio
+        clientImage:
+          repository: bitnamilegacy/minio-client
         auth:
           rootUser: minio
           rootPassword: minio123
