--- a/namespace/application/mlflow-postgres.yaml
+++ b/namespace/application/mlflow-postgres.yaml
@@ -14,6 +14,8 @@ spec:
     targetRevision: 12.5.6
     helm:
       valuesObject:
+        image:
+          repository: bitnamilegacy/postgresql
         auth:
           username: mlflow
           password: mlflowpass
